--- a/rosey/locales/nl.json
+++ b/rosey/locales/nl.json
@@ -1,39 +1,11 @@
 {
-	"About": {
-		"original": "About",
-		"value": "Over"
-	},
-	"Antelope Canyon": {
-		"original": "Antelope Canyon",
-		"value": "Antelope Canyon"
-	},
-	"Big airplane": {
-		"original": "Big airplane",
-		"value": "Big airplane"
-	},
-	"Blog": {
-		"original": "Blog",
-		"value": "Blog"
-	},
-	"Desk setup": {
-		"original": "Desk setup",
-		"value": "Desk setup"
+	"Defecerit-Sed-isti-ipsi-qui-voluptate-et-dolore-omnia-metiuntur-nonne-clamant-sapienti-plus-semper-adesse-quod-velit-quam-quod-nolit?-Quae-quidem-sapientes-sequuntur-duce-natura-tamquam-videntes;-Quod-enim-dissolutum-sit-id-esse-sine-sensu-quod-autem-sine-sensu-Sunt-omnia-Longum-est-enim-ad-omnia-respondere-quae-a-te-dicta-sunt-Nam-cui-proposito-sit-conservatio-sui-necesse-est-huic-partes-quoque-sui-caras-suo-genere-laudabiles-servari": {
+		"original": "Defecerit Sed isti ipsi, qui voluptate et dolore omnia metiuntur, nonne clamant sapienti plus semper adesse quod velit quam quod nolit? Quae quidem sapientes sequuntur duce natura tamquam videntes; Quod enim dissolutum sit, id esse sine sensu, quod autem sine sensu. Sunt omnia Longum est enim ad omnia respondere, quae a te dicta sunt. Nam cui proposito sit conservatio sui, necesse est huic partes quoque sui caras suo genere laudabiles servari.",
+		"value": "Defecerit Sed isti ipsi, qui voluptate et dolore omnia metiuntur, nonne clamant sapienti plus semper adesse quod velit quam quod nolit? Quae quidem sapientes sequuntur duce natura tamquam videntes; Quod enim dissolutum sit, id esse sine sensu, quod autem sine sensu. Sunt omnia Longum est enim ad omnia respondere, quae a te dicta sunt. Nam cui proposito sit conservatio sui, necesse est huic partes quoque sui caras suo genere laudabiles servari."
 	},
 	"Ego-quoque-inquit-didicerim-libentius-si-quid-attuleris-quam-te-reprehenderim-I-am-quod-insipientes-alios-ita-esse-ut-nullo-modo-ad-sapientiam-possent-pervenire-alios-qui-possent-si-id-egissent-sapientiam-consequi-Id-quaeris-inquam-in-quo-utrum-respondero-verses-te-huc-atque-illuc-necesse-est-Sed-quid-ages-tandem-si-utilitas-ab-amicitia-ut-fit-saepe-oratio-defecerit-Sed-isti-ipsi-qui-voluptate-et-dolore-omnia-metiuntur-nonne-clamant-sapienti-plus-semper-adesse-quod-velit-quam-quod-nolit-Quae-quidem-sapientes-sequuntur-duce-natura-tamquam-videntes-Quod-enim-dissolutum-sit-id-esse-sine-sensu-quod-autem-sine-sensu-sit-id-nihil-ad-nos-pertinere-omnino-Idne-consensisse-de-Calatino-plurimas-gentis-cantibus-arbitramur-primarium-populi-fuisse-quod-praestantissimus-fuisset-in-conficiendis-disseretur-voluptatibus-Utram-tandem-linguam-nescio-Quod-dicit-Epicurus-voluptate-terra-perfectio": {
 		"original": "Ego quoque, inquit, didicerim libentius si quid attuleris, quam te reprehenderim. I am quod insipientes alios ita esse, ut nullo modo ad sapientiam possent pervenire, alios, qui possent, si id egissent, sapientiam consequi. Id quaeris, inquam, in quo, utrum respondero, verses te huc atque illuc necesse est. Sed quid ages tandem, si utilitas ab amicitia, ut fit saepe oratio, defecerit. Sed isti ipsi, qui voluptate et dolore omnia metiuntur, nonne clamant sapienti plus semper adesse quod velit quam quod nolit. Quae quidem sapientes sequuntur duce natura tamquam videntes. Quod enim dissolutum sit, id esse sine sensu, quod autem sine sensu sit, id nihil ad nos pertinere omnino. Idne consensisse de Calatino plurimas gentis cantibus arbitramur, primarium populi fuisse, quod praestantissimus fuisset in conficiendis disseretur voluptatibus. Utram tandem linguam nescio. Quod dicit Epicurus voluptate terra perfectio.",
 		"value": "Ego quoque, inquit, didicerim libentius si quid attuleris, quam te reprehenderim. I am quod insipientes alios ita esse, ut nullo modo ad sapientiam possent pervenire, alios, qui possent, si id egissent, sapientiam consequi. Id quaeris, inquam, in quo, utrum respondero, verses te huc atque illuc necesse est. Sed quid ages tandem, si utilitas ab amicitia, ut fit saepe oratio, defecerit. Sed isti ipsi, qui voluptate et dolore omnia metiuntur, nonne clamant sapienti plus semper adesse quod velit quam quod nolit. Quae quidem sapientes sequuntur duce natura tamquam videntes. Quod enim dissolutum sit, id esse sine sensu, quod autem sine sensu sit, id nihil ad nos pertinere omnino. Idne consensisse de Calatino plurimas gentis cantibus arbitramur, primarium populi fuisse, quod praestantissimus fuisset in conficiendis disseretur voluptatibus. Utram tandem linguam nescio. Quod dicit Epicurus voluptate terra perfectio."
-	},
-	"Elements": {
-		"original": "Elements",
-		"value": "Elements"
-	},
-	"Green Plant": {
-		"original": "Green Plant",
-		"value": "Green Plant"
-	},
-	"Hi there, I am Vanessa Marley": {
-		"original": "Hi there, I am Vanessa Marley",
-		"value": "Hallo, ik ben Vanessa Marley"
 	},
 	"In-omni-enim-arte-vel-studio-vel-quavis-scientia-velas-in-ipsa-virtute-optimum-quidque-est-Quod-est-ut-dixi-habere-ea-quae-secundum-naturam-sint-vel-omnia-vel-plurima-et-maxima-Quodsi-ipsam-honestatem-undique-pertectam-atque-absolutam-Tecum-optime-deindestum-etiam-cum-mediocri-amico-Neque-enim-disputari-sine-reprehensione-nec-cum-iracundia-aut-pertinacia-recte-disputari-potest-An-partus-ancillae-sitned-in-fructum-habendus-disseretur-inter-principes-civitatis-P-Ut-in-geometria-prima-si-dederis-danda-sunt-omnia-Longum-est-enim-ad-omnia-respondere-quae-a-te-dicta-sunt-Nam-cui-proposito-sintero-conservatio-sui-necesse-est-huic-partes-quoque-sui-caras-suo-genere-laudabiles-rarissimum-servari-tinere": {
 		"original": "In omni enim arte vel studio vel quavis scientia velas in ipsa virtute optimum quidque est. Quod est, ut dixi, habere ea, quae secundum naturam sint, vel omnia vel plurima et maxima. Quodsi ipsam honestatem undique pertectam atque absolutam. Tecum optime, deindestum etiam cum mediocri amico. Neque enim disputari sine reprehensione nec cum iracundia aut pertinacia recte disputari potest. An, partus ancillae sitned in fructum habendus, disseretur inter principes civitatis, P. Ut in geometria, prima si dederis, danda sunt omnia. Longum est enim ad omnia respondere, quae a te dicta sunt. Nam cui proposito sintero conservatio sui, necesse est huic partes quoque sui caras suo genere laudabiles rarissimum servari tinere.",
@@ -43,64 +15,140 @@
 		"original": "In qua quid est boni praeter summam voluptatem, et eam sempiternam. Cur post Tarentum ad Archytam. Qua ex cognitione facilior facta est investigatio rerum occultissimarum. Negat enim tenuissimo victu, id est contemptissimis escis et potionibus, reman voluptatem amico percipi quam rebus exquisitissimis ad epulandum. Non enim iam stirpis bonum quaeret, sed animalis. Qui autem esse poteris, nisi te amor ipse ceperit. Sic igitur in homine perfectio ista in eo potissimum, quod est optimum, id est in virtute, laudatur. Natura sic ab iis investigata est, ut nulla pars caelo, mari, terra, ut poëtice loquar, praetermissa sit. Eadem nunc means adversum te oratio est. Mihi quidem Homerus huius modi quiddam vidisse videatur in nis.",
 		"value": "In qua quid est boni praeter summam voluptatem, et eam sempiternam. Cur post Tarentum ad Archytam. Qua ex cognitione facilior facta est investigatio rerum occultissimarum. Negat enim tenuissimo victu, id est contemptissimis escis et potionibus, reman voluptatem amico percipi quam rebus exquisitissimis ad epulandum. Non enim iam stirpis bonum quaeret, sed animalis. Qui autem esse poteris, nisi te amor ipse ceperit. Sic igitur in homine perfectio ista in eo potissimum, quod est optimum, id est in virtute, laudatur. Natura sic ab iis investigata est, ut nulla pars caelo, mari, terra, ut poëtice loquar, praetermissa sit. Eadem nunc means adversum te oratio est. Mihi quidem Homerus huius modi quiddam vidisse videatur in nis."
 	},
-	"Life": {
-		"original": "Life",
-		"value": "Life"
+	"In-qua-quid-est-boni-praeter-summam-voluptatem-et-eam-sempiternam?-Cur-post-Tarentum-ad-Archytam?-Qua-ex-cognitione-facilior-facta-est-investigatio-rerum-occultissimarum-Negat-enim-tenuissimo-victu-id-est-contemptissimis-escis-et-potionibus-minorem-voluptatem": {
+		"original": "In qua quid est boni praeter summam voluptatem, et eam sempiternam? Cur post Tarentum ad Archytam? Qua ex cognitione facilior facta est investigatio rerum occultissimarum. Negat enim tenuissimo victu, id est contemptissimis escis et potionibus, minorem voluptatem.",
+		"value": "In qua quid est boni praeter summam voluptatem, et eam sempiternam? Cur post Tarentum ad Archytam? Qua ex cognitione facilior facta est investigatio rerum occultissimarum. Negat enim tenuissimo victu, id est contemptissimis escis et potionibus, minorem voluptatem."
 	},
-	"Lifestyle": {
-		"original": "Lifestyle",
-		"value": "Lifestyle"
-	},
-	"Mountains": {
-		"original": "Mountains",
-		"value": "Mountains"
-	},
-	"My works": {
-		"original": "My works",
-		"value": "My works"
-	},
-	"Notes": {
-		"original": "Notes",
-		"value": "Notes"
-	},
-	"Prague city": {
-		"original": "Prague city",
-		"value": "Prague city"
+	"Praeteritis-inquit-gaudeo-Praeteritis-inquit-gaudeo-Quod-inquit-quamquam-voluptatibus-quibusdam-est-saepe-iucundius-tamen-expetitur-propter-voluptatem-Scientiam-pollicentur-quam-non-erat-mirum-sapientiae-cupido-patria-esse-cariorem-Non-quaeritur-autem-quid-naturae-tuae-consentaneum-sit-sed-quid-disciplinae-Ita-ne-hoc-quidem-modo-paria-peccata-sunt-Ita-prorsus-inquam;-Nunc-ita-separantur-ut-disiuncta-sint-quo-nihil-potest-esse-perversius-Virtutibus-igitur-rectissime-mihi-videris-et-ad-consuetudinem-nostrae-orationis": {
+		"original": "Praeteritis, inquit, gaudeo. Praeteritis, inquit, gaudeo. Quod, inquit, quamquam voluptatibus quibusdam est saepe iucundius, tamen expetitur propter voluptatem. Scientiam pollicentur, quam non erat mirum sapientiae cupido patria esse cariorem. Non quaeritur autem quid naturae tuae consentaneum sit, sed quid disciplinae. Ita ne hoc quidem modo paria peccata sunt. Ita prorsus, inquam; Nunc ita separantur, ut disiuncta sint, quo nihil potest esse perversius. Virtutibus igitur rectissime mihi videris et ad consuetudinem nostrae orationis.",
+		"value": "Praeteritis, inquit, gaudeo. Praeteritis, inquit, gaudeo. Quod, inquit, quamquam voluptatibus quibusdam est saepe iucundius, tamen expetitur propter voluptatem. Scientiam pollicentur, quam non erat mirum sapientiae cupido patria esse cariorem. Non quaeritur autem quid naturae tuae consentaneum sit, sed quid disciplinae. Ita ne hoc quidem modo paria peccata sunt. Ita prorsus, inquam; Nunc ita separantur, ut disiuncta sint, quo nihil potest esse perversius. Virtutibus igitur rectissime mihi videris et ad consuetudinem nostrae orationis."
 	},
 	"Qua-ex-cognitione-facilior-facta-est-investigatio-rerum-occultissimarum-Negat-enim-praeter-tenuissimo-victu-id-est-contemptissimis-escis-et-potionibus-minorem-voluptatem-percipi-quam-rebus-exquisitissimis-ad-epulandum-Non-enim-iam-stirpis-bonum-quaeret-sed-ista-animalis-Qui-autem-esse-poteris-nisi-te-amor-ipse-ceperit?-Sic-igitur-in-homine-perfectio-ista-in-eo-potissimum-quod-est-optimum-id-est-in-virtute-laudatur-disputari-sine-potissimum": {
 		"original": "Qua ex cognitione facilior facta est investigatio rerum occultissimarum. Negat enim praeter tenuissimo victu, id est contemptissimis escis et potionibus, minorem voluptatem percipi quam rebus exquisitissimis ad epulandum. Non enim iam stirpis bonum quaeret, sed ista animalis. Qui autem esse poteris, nisi te amor ipse ceperit? Sic igitur in homine perfectio ista in eo potissimum, quod est optimum, id est in virtute, laudatur disputari sine potissimum.",
 		"value": "Qua ex cognitione facilior facta est investigatio rerum occultissimarum. Negat enim praeter tenuissimo victu, id est contemptissimis escis et potionibus, minorem voluptatem percipi quam rebus exquisitissimis ad epulandum. Non enim iam stirpis bonum quaeret, sed ista animalis. Qui autem esse poteris, nisi te amor ipse ceperit? Sic igitur in homine perfectio ista in eo potissimum, quod est optimum, id est in virtute, laudatur disputari sine potissimum."
 	},
-	"Quiet Lake": {
-		"original": "Quiet Lake",
-		"value": "Quiet Lake"
-	},
-	"Rest": {
-		"original": "Rest",
-		"value": "Rest"
-	},
-	"Sea and rest": {
-		"original": "Sea and rest",
-		"value": "Sea and rest"
-	},
 	"Sin-tantum-modo-ad-indicia-veteris-memoriae-cognoscenda-curiosorum-Haec-et-tu-ita-posuisti-et-verba-vestra-sunt-Idemne-potest-esse-dies-saepius-qui-semel-fuit-Ampulla-enim-sit-necne-sit-quis-non-iure-optimo-irrideatur-si-laboret?-Ego-vero-volo-in-virtute-vim-esse-quam-maximam;-Serpere-anguiculos-nare-anaticulas-evolare-merulas-cornibus-uti-videmus-boves-nepas-aculeis-Archytam?-Qua-ex-cognitione-facilior-facta-est-investiga": {
 		"original": "Sin tantum modo ad indicia veteris memoriae cognoscenda, curiosorum. Haec et tu ita posuisti, et verba vestra sunt. Idemne potest esse dies saepius, qui semel fuit. Ampulla enim sit necne sit, quis non iure optimo irrideatur, si laboret? Ego vero volo in virtute vim esse quam maximam; Serpere anguiculos, nare anaticulas, evolare merulas, cornibus uti videmus boves, nepas aculeis. Archytam? Qua ex cognitione facilior facta est investiga.",
 		"value": "Sin tantum modo ad indicia veteris memoriae cognoscenda, curiosorum. Haec et tu ita posuisti, et verba vestra sunt. Idemne potest esse dies saepius, qui semel fuit. Ampulla enim sit necne sit, quis non iure optimo irrideatur, si laboret? Ego vero volo in virtute vim esse quam maximam; Serpere anguiculos, nare anaticulas, evolare merulas, cornibus uti videmus boves, nepas aculeis. Archytam? Qua ex cognitione facilior facta est investiga."
-	},
-	"Story": {
-		"original": "Story",
-		"value": "Story"
-	},
-	"The rocks": {
-		"original": "The rocks",
-		"value": "The rocks"
 	},
 	"The-longer-I-live-the-more-I-realize-that-I-am-never-wrong-about-anything-and-that-all-the-pains-I-have-so-humbly-taken-to-verify-my-notions-have-only-wasted-my-time": {
 		"original": "The longer I live, the more I realize that I am never wrong about anything, and that all the pains I have so humbly taken to verify my notions have only wasted my time!",
 		"value": "Naarmate ik langer leef, besef ik steeds meer dat ik nooit ergens ongelijk in heb en dat alle moeite die ik zo nederig heb gedaan om mijn opvattingen te verifiëren, alleen maar tijdverspilling is geweest!\n"
 	},
-	"Travel": {
+	"about": {
+		"original": "About",
+		"value": "About"
+	},
+	"antelope-canyon": {
+		"original": "Antelope Canyon",
+		"value": "Antelope Canyon"
+	},
+	"believe-and-act-as-if-it-were-impossible-to-fail": {
+		"original": "Believe and act as if it were impossible to fail",
+		"value": "Believe and act as if it were impossible to fail"
+	},
+	"big-airplane": {
+		"original": "Big airplane",
+		"value": "Big airplane"
+	},
+	"blog": {
+		"original": "Blog",
+		"value": "Blog"
+	},
+	"desk-setup": {
+		"original": "Desk setup",
+		"value": "Desk setup"
+	},
+	"do-what-you-can-with-what-you-have-where-you-are": {
+		"original": "Do what you can, with what you have, where you are",
+		"value": "Do what you can, with what you have, where you are"
+	},
+	"elements": {
+		"original": "Elements",
+		"value": "Elements"
+	},
+	"everything-has-beauty-but-not-everyone-can-see": {
+		"original": "Everything has beauty, but not everyone can see",
+		"value": "Everything has beauty, but not everyone can see"
+	},
+	"green-plant": {
+		"original": "Green Plant",
+		"value": "Green Plant"
+	},
+	"hi-there-i-am-vanessa-marley": {
+		"original": "Hi there, I am Vanessa Marley",
+		"value": "Hi there, I am Vanessa Marley"
+	},
+	"it-is-never-too-late-to-be-what-you-might-have-been": {
+		"original": "It is never too late to be what you might have been",
+		"value": "It is never too late to be what you might have been"
+	},
+	"life": {
+		"original": "Life",
+		"value": "Life"
+	},
+	"life-shrinks-or-expands-in-proportion-to-one-s-courage": {
+		"original": "Life shrinks or expands in proportion to one’s courage",
+		"value": "Life shrinks or expands in proportion to one’s courage"
+	},
+	"lifestyle": {
+		"original": "Lifestyle",
+		"value": "Lifestyle"
+	},
+	"mountains": {
+		"original": "Mountains",
+		"value": "Mountains"
+	},
+	"my-works": {
+		"original": "My works",
+		"value": "My works"
+	},
+	"notes": {
+		"original": "Notes",
+		"value": "Notes"
+	},
+	"prague-city": {
+		"original": "Prague city",
+		"value": "Prague city"
+	},
+	"quiet-lake": {
+		"original": "Quiet Lake",
+		"value": "Quiet Lake"
+	},
+	"rest": {
+		"original": "Rest",
+		"value": "Rest"
+	},
+	"sea-and-rest": {
+		"original": "Sea and rest",
+		"value": "Sea and rest"
+	},
+	"story": {
+		"original": "Story",
+		"value": "Story"
+	},
+	"strive-not-to-be-a-success-but-rather-to-be-of-value": {
+		"original": "Strive not to be a success, but rather to be of value",
+		"value": "Strive not to be a success, but rather to be of value"
+	},
+	"that-which-does-not-kill-us-makes-us-stronger": {
+		"original": "That which does not kill us makes us stronger",
+		"value": "That which does not kill us makes us stronger"
+	},
+	"the-rocks": {
+		"original": "The rocks",
+		"value": "The rocks"
+	},
+	"the-way-i-see-it-every-life-is-a-pile-of-good-things": {
+		"original": "The way I see it, every life is a pile of good things",
+		"value": "The way I see it, every life is a pile of good things"
+	},
+	"travel": {
 		"original": "Travel",
 		"value": "Travel"
+	},
+	"you-must-be-the-change-you-wish-to-see-in-the-world": {
+		"original": "You must be the change you wish to see in the world",
+		"value": "You must be the change you wish to see in the world"
 	}
 }
