--- a/rosey/translations/nl/blog/page/2.yaml
+++ b/rosey/translations/nl/blog/page/2.yaml
@@ -14,14 +14,14 @@ _inputs:
             history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
             /rosey/translations/nl/blog/page/2.yaml)"
           inputs:
-            - Blog
+            - blog
         - heading: Already translated (nl)
           comment: "[blog/page/2/](https://exotic-bison.cloudvent.net/blog/page/2/)  //  \
             [Git
             history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
             /rosey/translations/nl/blog/page/2.yaml)"
           inputs: []
-  Blog:
+  blog:
     label: Blog
     hidden: false
     type: text
@@ -29,4 +29,4 @@ _inputs:
     comment: "[See in
       context](https://exotic-bison.cloudvent.net/blog/page/2/#:~:text=Blog)"
 urlTranslation: blog/page/2/index.html
-Blog: ""
+blog: ""
