--- a/rosey/translations/nl/projects.yaml
+++ b/rosey/translations/nl/projects.yaml
@@ -12,13 +12,13 @@ _inputs:
             history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
             /rosey/translations/nl/projects.yaml)"
           inputs:
-            - My works
+            - my-works
         - heading: Already translated (nl)
           comment: "[projects/](https://exotic-bison.cloudvent.net/projects/)  //  [Git
             history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
             /rosey/translations/nl/projects.yaml)"
           inputs: []
-  My works:
+  my-works:
     label: My works
     hidden: false
     type: text
@@ -26,4 +26,4 @@ _inputs:
     comment: "[See in
       context](https://exotic-bison.cloudvent.net/projects/#:~:text=My%20works)"
 urlTranslation: projects/index.html
-My works: ""
+my-works: ""
