--- a/rosey/translations/nl/tag/life.yaml
+++ b/rosey/translations/nl/tag/life.yaml
@@ -12,18 +12,66 @@ _inputs:
             history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
             /rosey/translations/nl/tag/life.yaml)"
           inputs:
-            - Life
+            - do-what-you-can-with-what-you-have-where-you-are
+            - life
+            - life-shrinks-or-expands-in-proportion-to-one-s-courage
+            - strive-not-to-be-a-success-but-rather-to-be-of-value
         - heading: Already translated (nl)
           comment: "[tag/life](https://exotic-bison.cloudvent.net/tag/life)  //  [Git
             history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
             /rosey/translations/nl/tag/life.yaml)"
           inputs: []
-  Life:
+  do-what-you-can-with-what-you-have-where-you-are:
+    label: Do what you can, with what you have, where...
+    hidden: false
+    type: textarea
+    options: {}
+    comment: "[See in
+      context](https://exotic-bison.cloudvent.net/tag/life#:~:text=Do%20what%20\
+      you,where%20you%20are)"
+    context:
+      open: false
+      title: Untranslated Text
+      icon: translate
+      content: |
+        Do what you can, with what you have, where you are
+  life:
     label: Life
     hidden: false
     type: text
     options: {}
     comment: "[See in
       context](https://exotic-bison.cloudvent.net/tag/life#:~:text=Life)"
+  life-shrinks-or-expands-in-proportion-to-one-s-courage:
+    label: Life shrinks or expands in proportion to o...
+    hidden: false
+    type: textarea
+    options: {}
+    comment: "[See in
+      context](https://exotic-bison.cloudvent.net/tag/life#:~:text=Life%20shrin\
+      ks%20or,to%20one%E2%80%99s%20courage)"
+    context:
+      open: false
+      title: Untranslated Text
+      icon: translate
+      content: |
+        Life shrinks or expands in proportion to one’s courage
+  strive-not-to-be-a-success-but-rather-to-be-of-value:
+    label: Strive not to be a success, but rather to ...
+    hidden: false
+    type: textarea
+    options: {}
+    comment: "[See in
+      context](https://exotic-bison.cloudvent.net/tag/life#:~:text=Strive%20not\
+      %20to,be%20of%20value)"
+    context:
+      open: false
+      title: Untranslated Text
+      icon: translate
+      content: |
+        Strive not to be a success, but rather to be of value
 urlTranslation: tag/life.html
-Life: ""
+do-what-you-can-with-what-you-have-where-you-are: ""
+life: ""
+life-shrinks-or-expands-in-proportion-to-one-s-courage: ""
+strive-not-to-be-a-success-but-rather-to-be-of-value: ""
