--- a/rosey/translations/nl/tag/rest.yaml
+++ b/rosey/translations/nl/tag/rest.yaml
@@ -12,18 +12,66 @@ _inputs:
             history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
             /rosey/translations/nl/tag/rest.yaml)"
           inputs:
-            - Rest
+            - everything-has-beauty-but-not-everyone-can-see
+            - rest
+            - the-way-i-see-it-every-life-is-a-pile-of-good-things
+            - you-must-be-the-change-you-wish-to-see-in-the-world
         - heading: Already translated (nl)
           comment: "[tag/rest](https://exotic-bison.cloudvent.net/tag/rest)  //  [Git
             history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
             /rosey/translations/nl/tag/rest.yaml)"
           inputs: []
-  Rest:
+  everything-has-beauty-but-not-everyone-can-see:
+    label: Everything has beauty, but not everyone ca...
+    hidden: false
+    type: textarea
+    options: {}
+    comment: "[See in
+      context](https://exotic-bison.cloudvent.net/tag/rest#:~:text=Everything%2\
+      0has%20beauty,everyone%20can%20see)"
+    context:
+      open: false
+      title: Untranslated Text
+      icon: translate
+      content: |
+        Everything has beauty, but not everyone can see
+  rest:
     label: Rest
     hidden: false
     type: text
     options: {}
     comment: "[See in
       context](https://exotic-bison.cloudvent.net/tag/rest#:~:text=Rest)"
+  the-way-i-see-it-every-life-is-a-pile-of-good-things:
+    label: The way I see it, every life is a pile of ...
+    hidden: false
+    type: textarea
+    options: {}
+    comment: "[See in
+      context](https://exotic-bison.cloudvent.net/tag/rest#:~:text=The%20way%20\
+      I,of%20good%20things)"
+    context:
+      open: false
+      title: Untranslated Text
+      icon: translate
+      content: |
+        The way I see it, every life is a pile of good things
+  you-must-be-the-change-you-wish-to-see-in-the-world:
+    label: You must be the change you wish to see in ...
+    hidden: false
+    type: textarea
+    options: {}
+    comment: "[See in
+      context](https://exotic-bison.cloudvent.net/tag/rest#:~:text=You%20must%2\
+      0be,in%20the%20world)"
+    context:
+      open: false
+      title: Untranslated Text
+      icon: translate
+      content: |
+        You must be the change you wish to see in the world
 urlTranslation: tag/rest.html
-Rest: ""
+everything-has-beauty-but-not-everyone-can-see: ""
+rest: ""
+the-way-i-see-it-every-life-is-a-pile-of-good-things: ""
+you-must-be-the-change-you-wish-to-see-in-the-world: ""
